[project]
name = "dhvt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch<=2.7.1",
    "torchvision<=0.22.1",
    "timm==0.4.12",
    "einops",
    "tensorboardX",
    "numpy<2",
    "lmdb",
    "pyarrow",
    "six>=1.17.0",
    "torchprofile>=0.1.0",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.3",
    "dotenv>=0.9.9",
]

[tool.uv]
index-url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
